--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pristine-validator",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/validator.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
