--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "pristine-validator",
+  "name": "@pristine/class-validator",
   "version": "1.0.0",
   "description": "",
   "main": "src/validator.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc -p tsconfig.json && tsc -p tsconfig.cjs.json",
+    "prepare": "npm run build",
+    "prepublishOnly": "git push --follow-tags",
+    "test": "jest",
+    "test:cov": "jest --coverage"
   },
   "repository": {
     "type": "git",
