--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "date-fns": "^2.28.0",
     "libphonenumber-js": "^1.10.6",
+    "reflect-metadata": "^0.2.1",
     "validator": "^13.7.0"
   },
   "jest": {
