--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "typescript": "^4.7.3"
   },
   "dependencies": {
+    "@pristine-ts/metadata": "^1.0.0",
     "date-fns": "^2.28.0",
     "libphonenumber-js": "^1.10.6",
     "reflect-metadata": "^0.2.1",
