--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
       - run: npm run build
-      - run: npx eslint --ext .ts
+      - run: npx eslint **/*.ts
       - run: npm run test
 
   publish:
