--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dist"
   ],
   "devDependencies": {
+    "@eslint/js": "^9.4.0",
     "@types/jest": "^27.4.1",
     "@types/validator": "^13.7.3",
     "jest": "^26.6.3",
